// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animation multi mode should be fine with less than eight arguments 1`] = `
Object {
  "animation": "rotate 1s ease-in-out",
}
`;

exports[`animation multi mode should be fine with multiple animations 1`] = `
Object {
  "animation": "rotate 1s ease-in-out, colorchange 2s",
}
`;

exports[`animation multi mode should pass first eight arguments to the CSS in multi mode 1`] = `
Object {
  "animation": "rotate 1s ease-in-out 0.5s 5 reverse forwards paused",
}
`;

exports[`animation single mode should be fine with less than eight arguments 1`] = `
Object {
  "animation": "rotate, 1s, ease-in-out",
}
`;

exports[`animation single mode should pass first eight arguments to the CSS 1`] = `
Object {
  "animation": "rotate, 1s, ease-in-out, 0.5s, 5, reverse, forwards, paused",
}
`;

exports[`animation single mode should throw a warning if more than eight elements are supplied 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- shorthands/animation.js --%c

animation %cexpects a maximum of %c1 parameter%c. However, you passed %c9 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#animation%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`animation single mode should throw an error if more than eight elements are supplied 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- shorthands/animation.js --%c

animation %cexpects a maximum of %c1 parameter%c. However, you passed %c9 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#animation%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
